fix: integrate safe computer use and Android 26 support